# python-api

./: .env  .env.example  .gitignore  README.md  TODO.md  docker-compose.yml  note.txt  pyproject.toml  requirements.txt
app/: main.py
app/controllers/: __init__.py  chatbot_controller.py
app/database/: database.py
app/middleware/: api_key_middleware.py
app/models/: __init__.py  chatbot.py  chuck_norris.py  database.py
app/routes/: routers.py
app/schemas/: __init__.py  schemas.py
docker/mongo/: Dockerfile  init-mongo.js  mongod.conf
docker/python/: Dockerfile
tests/: conftest.py  pytest.ini  test_chatbot.py  test_database.py
