[project]
name = "python-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Jake Marchant",email = "JSMarchant97@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "pymongo (>=4.13.2,<4.14.0)",
    "pydantic (>=2.11.7,<2.12.0)",
    "starlette (>=0.47.1,<0.48.0)",
    "requests (>=2.32.4,<2.33.0)",
    "pytest (>=8.0.0,<8.1.0)",
    "pytest-asyncio (>=0.23.5,<0.24.0)",
    "httpx (>=0.26.0,<0.27.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false